Fix masked scrollbar

--- a/site/static/main.css
+++ b/site/static/main.css
@@ -10,7 +10,8 @@
     --site-footer-height: 3rem;
 
     --navigation-horizontal-padding: 1.2rem;
-    --scrollbar-width: 7px;
+    --scrollbar-width: 7px;     /* Only applies to browsers that support ::-webkit-scrollbar */
+    --scrollbar-mask-width: 1rem;
 
     /* Colors */
     --default-copy-color: rgba(0, 0, 0, 0.7);
